feat(be): add patch method | docs: update srs
