# backend/internal/handlers/vocabulary_handler.go
@@ -11,7 +11,7 @@ import (
 	"github.com/go-chi/chi/v5"
 )
 
-/* Хранит репо и предоставляет методы-обработчики */
+// Структура репо, которая предоставляет методы-обработчики
 type VocabularyHandler struct {
 	repo *repository.VocabularyRepo
 }
@@ -20,7 +20,7 @@ func NewVocabularyHandler(repo *repository.VocabularyRepo) *VocabularyHandler {
 	return &VocabularyHandler{repo: repo}
 }
 
-/* GET /api/v1/words - возвращает все слова */
+// GET /api/v1/words - возвращает все слова
 func (h *VocabularyHandler) GetWords(w http.ResponseWriter, r *http.Request) {
 	words, err := h.repo.GetAll()
 	if err != nil {
@@ -33,7 +33,7 @@ func (h *VocabularyHandler) GetWords(w http.ResponseWriter, r *http.Request) {
 	json.NewEncoder(w).Encode(words)
 }
 
-/* POST /api/v1/words - создает новое слово */
+// POST /api/v1/words - создает новое слово
 func (h *VocabularyHandler) CreateWord(w http.ResponseWriter, r *http.Request) {
 	var word models.Vocabulary
 
@@ -66,8 +66,63 @@ func (h *VocabularyHandler) CreateWord(w http.ResponseWriter, r *http.Request) {
 	json.NewEncoder(w).Encode(response)
 }
 
-/* PUT /appi/v1/words/{id} - обновляет слово по ID */
-func (h *VocabularyHandler) UpdateWord(w http.ResponseWriter, r *http.Request) {
+// PATCH /appi/v1/words/{id} - частично обновляет слово по ID
+func (h *VocabularyHandler) PatchWord(w http.ResponseWriter, r *http.Request) {
+	// Извлечение ID из URL-параметра
+	idParam := chi.URLParam(r, "id")
+	id, err := strconv.Atoi(idParam)
+	if err != nil {
+		http.Error(w, `{"error": "invalid id"}`, http.StatusBadRequest)
+		return
+	}
+
+	// Декодинг JSON в map вместо структуры
+	var updates map[string]interface{}
+	if err := json.NewDecoder(r.Body).Decode(&updates); err != nil {
+		http.Error(w, `{"error": "invalid json"}`, http.StatusBadRequest)
+		return
+	}
+
+	// Валидация: переданы только разрешенные поля
+	allowedFields := map[string]bool{
+		"russian":  true,
+		"japanese": true,
+		"onyomi":   true,
+		"kunoymi":  true,
+	}
+
+	for field := range updates {
+		if !allowedFields[field] {
+			http.Error(w, `{"error": "field '`+field+`' is not allowed}`, http.StatusBadRequest)
+			return
+		}
+	}
+
+	// Валидация: переданные обязательные поля - не пустые
+	if russian, ok := updates["russian"]; ok && russian == "" {
+		http.Error(w, `{"error": "russian cannot be empty"}`, http.StatusBadRequest)
+		return
+	}
+	if japanese, ok := updates["japanese"]; ok && japanese == "" {
+		http.Error(w, `{"error": "japanese cannot be empty"}`, http.StatusBadRequest)
+		return
+	}
+
+	// Передача данных в репо
+	err = h.repo.PartialUpdate(id, updates)
+	if err != nil {
+		http.Error(w, `{"error": "`+err.Error()+`"}`, http.StatusInternalServerError)
+		return
+	}
+
+	w.Header().Set("Content-Type", "application/json; charset=utf-8")
+	w.WriteHeader(http.StatusOK)
+	response := map[string]string{"message": "word partially updated successfully"}
+	json.NewEncoder(w).Encode(response)
+}
+
+// PUT /appi/v1/words/{id} - полностью обновляет слово по ID
+func (h *VocabularyHandler) PutWord(w http.ResponseWriter, r *http.Request) {
 	// Извлекаем ID из URL-параметра
 	idParam := chi.URLParam(r, "id")
 	id, err := strconv.Atoi(idParam)
@@ -94,7 +149,7 @@ func (h *VocabularyHandler) UpdateWord(w http.ResponseWriter, r *http.Request) {
 	json.NewEncoder(w).Encode(responce)
 }
 
-/* DELETE /api/v1/words/{id} - удаляет слово по ID */
+// DELETE /api/v1/words/{id} - удаляет слово по ID
 func (h *VocabularyHandler) DeleteWord(w http.ResponseWriter, r *http.Request) {
 	idParam := chi.URLParam(r, "id")
 	id, err := strconv.Atoi(idParam)
